# hledger-interest

./: .gitignore  .travis.yml  Main.hs  README.md  bgb288.irt  cabal.project  hledger-interest.cabal  release.nix  stack.yaml  test.ledger
.github/workflows/: haskell-ci.yml  hlint.yml
Hledger/: Interest.hs
Hledger/Interest/: DayCountConvention.hs  Rate.hs  Spec.hs
shelltests/: multi-currency.test
