Name:                   hledger-interest
Version:                1.0
Synopsis:               computes interest for a given account
License:                BSD3
License-file:           LICENSE
Author:                 Peter Simons
Maintainer:             simons@cryp.to
Category:               Finance
Build-type:             Simple
Cabal-version:          >= 1.2

Executable hledger-interest
  Main-is:              Main.hs
  Build-depends:        base >= 3 && < 5, hledger-lib >= 0.14, time, mtl, Cabal
  other-modules:        Hledger.Interest
                        Hledger.Interest.DayCountConvention
                        Hledger.Interest.Rate
  Ghc-Options:          -Wall
